--- a/rl_training.ipynb
+++ b/rl_training.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fri Nov 22 22:46:56 2024       \n",
+      "Sat Nov 23 00:21:55 2024       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 550.127.05             Driver Version: 550.127.05     CUDA Version: 12.4     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -18,7 +18,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA RTX 2000 Ada Gene...    On  |   00000000:02:00.0 Off |                  Off |\n",
-      "| 30%   25C    P8              7W /   70W |       2MiB /  16380MiB |      0%      Default |\n",
+      "| 30%   23C    P8              6W /   70W |       2MiB /  16380MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,30 +132,37 @@
     "    def __init__(self, n_observations, n_actions):\n",
     "        print(f'Creating DQN with {n_observations} observations and {n_actions} actions')\n",
     "        super(DQN, self).__init__()\n",
-    "        self.layer1 = nn.Linear(n_observations, 256)\n",
-    "        self.layer2 = nn.Linear(256, 128)\n",
-    "        self.layer3 = nn.Linear(128, n_actions)\n",
+    "        self.layer1 = nn.Linear(n_observations, 128)\n",
+    "        self.layer2 = nn.Linear(128, 128)\n",
     "        self.layer4 = nn.Sigmoid()\n",
+    "        self.layer3 = nn.Linear(128, n_actions)\n",
+    "        \n",
     "\n",
     "    # Called with either one element to determine next action, or a batch\n",
     "    # during optimization. Returns tensor([[left0exp,right0exp]...]).\n",
     "    def forward(self, x):\n",
     "        x = F.relu(self.layer1(x))\n",
     "        x = F.relu(self.layer2(x))\n",
-    "        x = self.layer3(x)\n",
-    "        return F.sigmoid(self.layer4(x))"
+    "        x = F.sigmoid(self.layer4(x))\n",
+    "        return self.layer3(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating DQN with 120 observations and 40 actions\n",
+      "Creating DQN with 120 observations and 40 actions\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Creating DQN with 120 observations and 40 actions\n"
      ]
     }
@@ -195,8 +202,8 @@
     "\n",
     "def chosebest_action(tensor):\n",
     "    chosen = torch.argmax(tensor)\n",
-    "    out = np.zeros(1,40)\n",
-    "    out[chosen] = 1\n",
+    "    out = np.zeros((1,40))\n",
+    "    out[0][chosen] = 1\n",
     "\n",
     "    return torch.tensor(out, device=device, dtype=torch.int64)\n",
     "\n",
@@ -213,7 +220,7 @@
     "            # t.max(1) will return the largest column value of each row.\n",
     "            # second column on max result is index of where max element was\n",
     "            # found, so we pick action with the larger expected reward.\n",
-    "            computed = policy_net(state).detach().cpu().numpy()\n",
+    "            #computed = policy_net(state).detach().cpu().numpy()\n",
     "            \n",
     "            return chosebest_action(policy_net(state))\n",
     "    else:\n",
@@ -252,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,8 +286,6 @@
     "    # Compute Q(s_t, a) - the model computes Q(s_t), then we select the\n",
     "    # columns of actions taken. These are the actions which would've been taken\n",
     "    # for each batch state according to policy_net\n",
-    "    if action_batch.dtype == torch.int64:\n",
-    "        print(action_batch.shape)\n",
     "    state_action_values = policy_net(state_batch.view(BATCH_SIZE, -1)).gather(1, action_batch)\n",
     "\n",
     "    # Compute V(s_{t+1}) for all next states.\n",
@@ -291,14 +296,25 @@
     "    next_state_values = torch.zeros(BATCH_SIZE, device=device)\n",
     "    with torch.no_grad():\n",
     "        if len(non_final_next_states) > 0:\n",
-    "            non_final_next_states = non_final_next_states.view(-1, n_observations)\n",
-    "            next_state_values[non_final_mask] = target_net(non_final_next_states).max(1).values\n",
+    "            non_final_next_states = non_final_next_states.view(BATCH_SIZE, -1)\n",
+    "            computed = target_net(non_final_next_states).detach().cpu().numpy()\n",
+    "            means = []\n",
+    "            for floor in computed:\n",
+    "                means.append(np.mean(floor))\n",
+    "\n",
+    "            \n",
+    "            best = np.argmax(computed, axis=1)\n",
+    "            batch_index = np.floor(best/40)\n",
+    "            #print(f'Best {best} batch_index {batch_index} | computed {computed} | shape {means.shape}')\n",
+    "            next_state_values[non_final_mask] = torch.tensor(means, device=device, dtype=torch.float32)\n",
     "    # Compute the expected Q values\n",
     "    expected_state_action_values = (next_state_values * GAMMA) + reward_batch\n",
     "\n",
     "    # Compute Huber loss\n",
     "    criterion = nn.SmoothL1Loss()\n",
-    "    loss = criterion(state_action_values, expected_state_action_values.unsqueeze(1))\n",
+    "    #print(state_action_values.shape)\n",
+    "    #print(expected_state_action_values.shape)\n",
+    "    loss = criterion(state_action_values, expected_state_action_values.unsqueeze(2))\n",
     "\n",
     "    # Optimize the model\n",
     "    optimizer.zero_grad()\n",
@@ -310,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -338,29 +354,24 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([5120])\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "/root/workspace/ScopaAI_ToM/.venv/lib/python3.11/site-packages/torch/nn/modules/loss.py:1040: UserWarning: Using a target size (torch.Size([128, 128, 1])) that is different to the input size (torch.Size([128, 40])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.smooth_l1_loss(input, target, reduction=self.reduction, beta=self.beta)\n",
+      "Episodes:   0%|          | 0/10 [02:00<?, ?it/s]\n"
      ]
     },
     {
-     "ename": "RuntimeError",
-     "evalue": "Index tensor must have the same number of dimensions as input tensor",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 33\u001b[0m\n\u001b[1;32m     30\u001b[0m state \u001b[38;5;241m=\u001b[39m next_state\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# Perform one step of the optimization (on the policy network)\u001b[39;00m\n\u001b[0;32m---> 33\u001b[0m \u001b[43moptimize_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m# Soft update of the target network's weights\u001b[39;00m\n\u001b[1;32m     37\u001b[0m target_net_state_dict \u001b[38;5;241m=\u001b[39m target_net\u001b[38;5;241m.\u001b[39mstate_dict()\n",
-      "Cell \u001b[0;32mIn[33], line 26\u001b[0m, in \u001b[0;36moptimize_model\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m action_batch\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;241m==\u001b[39m torch\u001b[38;5;241m.\u001b[39mint64:\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;28mprint\u001b[39m(action_batch\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m---> 26\u001b[0m state_action_values \u001b[38;5;241m=\u001b[39m \u001b[43mpolicy_net\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate_batch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mview\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBATCH_SIZE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgather\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maction_batch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# Compute V(s_{t+1}) for all next states.\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;66;03m# Expected values of actions for non_final_next_states are computed based\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# on the \"older\" target_net; selecting their best reward with max(1).values\u001b[39;00m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# This is merged based on the mask, such that we'll have either the expected\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# state value or 0 in case the state was final.\u001b[39;00m\n\u001b[1;32m     33\u001b[0m next_state_values \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mzeros(BATCH_SIZE, device\u001b[38;5;241m=\u001b[39mdevice)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Index tensor must have the same number of dimensions as input tensor"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 34\u001b[0m\n\u001b[1;32m     31\u001b[0m state \u001b[38;5;241m=\u001b[39m next_state\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m# Perform one step of the optimization (on the policy network)\u001b[39;00m\n\u001b[0;32m---> 34\u001b[0m \u001b[43moptimize_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;66;03m# Soft update of the target network's weights\u001b[39;00m\n\u001b[1;32m     38\u001b[0m target_net_state_dict \u001b[38;5;241m=\u001b[39m target_net\u001b[38;5;241m.\u001b[39mstate_dict()\n",
+      "Cell \u001b[0;32mIn[10], line 19\u001b[0m, in \u001b[0;36moptimize_model\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m state_batch \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mstack(batch\u001b[38;5;241m.\u001b[39mstate)\n\u001b[1;32m     18\u001b[0m action_batch \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat(batch\u001b[38;5;241m.\u001b[39maction)\n\u001b[0;32m---> 19\u001b[0m reward_batch \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbatch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreward\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# Compute Q(s_t, a) - the model computes Q(s_t), then we select the\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# columns of actions taken. These are the actions which would've been taken\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# for each batch state according to policy_net\u001b[39;00m\n\u001b[1;32m     24\u001b[0m state_action_values \u001b[38;5;241m=\u001b[39m policy_net(state_batch\u001b[38;5;241m.\u001b[39mview(BATCH_SIZE, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m))\u001b[38;5;241m.\u001b[39mgather(\u001b[38;5;241m1\u001b[39m, action_batch)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -374,8 +385,9 @@
     "    # Initialize the environment and get its state\n",
     "    state = env.reset()\n",
     "    state = torch.tensor(state, dtype=torch.float32, device=device).unsqueeze(0)\n",
-    "    for t in tqdm(count(),desc='Steps', leave=False):\n",
+    "    for t in count():\n",
     "        action = select_action(state)\n",
+    "        \n",
     "        #print(f'state{state.shape} action{action.shape}')\n",
     "        #print(f'action{extrction(action)} for |action|{action.detach().cpu().numpy()}')\n",
     "        observation, reward, terminated, _ = env.step(extrction(action))\n",
@@ -417,13 +429,6 @@
     "plt.ioff()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
